# aya-offline

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/inl/aya_flutter/: MainActivity.kt
engine-c/: CMakeLists.txt  Makefile  aya_engine.podspec  build_wasm.sh
engine-c/src/: aya_api.c  aya_api.h  gguf.c  gguf.h  main.c  model.c  model.h  quant.h  test_gguf.c  test_meta.c
flutter_llama/android/: build.gradle
flutter_llama/android/src/main/cpp/: CMakeLists.txt
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: aya_session_controller.dart  model_download_controller.dart
lib/chat/: chat_screen.dart  file_picker_stub.dart  file_picker_web.dart
lib/engine/: engine.dart  inference_client.dart  native_engine.dart  sse_engine.dart  wasm_engine.dart
lib/models/: model_info.dart  model_manager.dart  model_picker.dart  storage_space_service.dart
lib/translate/: language_option.dart  translate_screen.dart
macos/: Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements  Info.plist  MainFlutterWindow.swift  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: model_download_controller_test.dart  model_manager_test.dart  widget_test.dart
web/: aya_worker.js  index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp
